data-ingest-frontend/data-ingest-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-ingest-frontend-ingress
  namespace: ml-toolkit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ml-toolkit.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: data-ingest-frontend-service
                port:
                  number: 80
